--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,18 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Google Maps API - Test by Jess</title>
-	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<style type="text/css">
-		html { height: 100%; } 
-		body{ height: 100%; margin: 0; } 
-		#mapDiv { width: 100%; height: 100%; border: black solid; }
-	</style>
-	<!-- Include Google Maps JS API -->
-	<script type="text/javascript"
-	src="https://maps.googleapis.com/maps/api/js?
-	key=AIzaSyAt_8VqqHpji6T2fKO-5ATxMW0C6_wb_sY&sensor=false">
-	</script>
 	<!-- Map Creation -->
 	<script type="text/javascript">	
 		//Defining map as a global variable to access from other functions
@@ -49,10 +34,7 @@
        }
 		google.maps.event.addDomListener(window, 'load', initMap);
 	</script>
-</head>
-<body>
 
-<div id="mapDiv"></div>
 
-</body>
-</html>
+<div id="mapDiv" class="text-center"></div>
+
