--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,13 +1,23 @@
-<h1>¡Conoce las reservas de tu ciudad!</h1>
+<div class="container">
+	<div class="jumbotron">
+		<div class="row"><h2 class="text-center"> Comunidad de vecinos <%= image_tag 'traity.jpg' %></h2></div>
 
-<% @comunities.each do |community| %>
-	<%= community.name %>
-	<h2>Espacios de tenis disponibles:</h2>
-	<%= community.tenis_spaces.each do |tenis_space| %>
-	<table></table>
-		<tr>
-			<td><%= tenis_space.name %></td>
-			<td><%= tenis_space.address %></td>
-		</tr>
-	<% end %>
-<% end %>
+		<br><br><br><br>
+
+		<% if @space.blank? %>
+			<h4 class="text-center">Todavía no tienes espacios deportivos introducidos.</h4>
+			<br>
+			<div class='text-center'><%= link_to 'Añadir Espacio', new_community_space_path(1), class: 'btn btn-default' %></div>
+		<% else %>
+			<% @spaces.each do |space| %>
+				
+			<% end %>
+		<% end %>
+
+	</div>
+</div>
+
+
+		
+
+
