--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-4 col-md-offset-4">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3>Añadir Nuevo Espacio</h3>
+					<h3 class="text-center">Añadir Espacio</h3>
 				</div>
 				<div class="panel-body">
 					<%= form_for [@space] do |f| %>        
@@ -20,15 +20,16 @@
 
                             <div class="form-group">
                                 <%= f.label :description %>
-                                <%= f.text_field :description, class: 'form-control' %>      
+                                <%= f.text_area :description, class: 'form-control' %>      
                             </div>
                         </div>      
 
-                        <div class="btn-group">
-                            <%= f.submit 'Save', class: 'btn btn-primary' %>
-                            <%= link_to 'Cancel', clients_path, class: "btn btn-default" %>            
-                        </div>
-                        <%= link_to 'Delete', client_path(@client), method: :delete, class: "btn btn-danger pull-right", data: { confirm: 'Are you sure?' } %>  
+						<br>
+
+                            <%= link_to 'Cancel', :back, class: "btn btn-default" %>    
+                            <div class="pull-right">
+                            	<%= f.submit 'Save', class: 'btn btn-primary' %>
+                            </div>        
                     <% end %>
 				</div>
 			</div>
