--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -25,6 +25,11 @@
 							
 							<h3 class="text-center"> <%= space.name %> </h3>
 							<br>
+							<% if space.picture.present? %>
+								<div class="text-center">
+									<%= image_tag space.picture.url(:medium) %>
+								</div>
+							<% end %>
 							<div class="text-center">
 								<%= space.description %>
 							</div>
