--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -22,6 +22,11 @@
                                 <%= f.label :description %>
                                 <%= f.text_area :description, class: 'form-control' %>      
                             </div>
+
+                            <div class="form-group">
+                                <%= f.label :picture %>
+                                <%= f.file_field :picture %>
+                            </div>
                         </div>      
 
 						<br>
