--- a/app/views/spaces/edit.html.erb
+++ b/app/views/spaces/edit.html.erb
@@ -21,6 +21,16 @@
                             <div class="form-group">
                                 <%= f.label :description %>
                                 <%= f.text_area :description, class: 'form-control' %>      
+                            </div>                            
+
+                            <div class="form-group">
+                                <%= f.label :open_hour %>
+                                <%= f.text_field :open_hour, class: 'form-control' %>      
+                            </div>                            
+
+                            <div class="form-group">
+                                <%= f.label :close_hour %>
+                                <%= f.text_field :close_hour, class: 'form-control' %>      
                             </div>
 
                             <div class="form-group">
