--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -24,6 +24,16 @@
                             </div>
 
                             <div class="form-group">
+                                <%= f.label :open_hour %>
+                                <%= f.text_field :open_hour, class: 'form-control' %>      
+                            </div>                            
+
+                            <div class="form-group">
+                                <%= f.label :close_hour %>
+                                <%= f.text_field :close_hour, class: 'form-control' %>      
+                            </div>
+
+                            <div class="form-group">
                                 <%= f.label :picture %>
                                 <%= f.file_field :picture %>
                             </div>
